Customize GC behavior
By default, the JVM does not free allocated heap back to the OS. This
configures away from that behavior, hopefully to prevent OOM engine
errors.

See http://www.stefankrause.net/wp/?p=14 for details on the specific
options chosen. Of all the examples in that post, this one performed the
best and brought my test repository's memory usage down from ~700MB to
~150MB. Its graph also shows most closely the pattern we'd prefer: the
slope of allocated heap closely matching used.